tolk-tester/tests/invalid-syntax/err-3609.tolk

fun main() {
    var x = lisp_list<int> {};
}

/**
@compilation_should_fail
@stderr can not detect struct name
 */
